--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,4 @@
 runtime: nodejs10
 
 env_variables:
-  CLOUD_INSTANCE: fake-instance
+  CLOUD_INSTANCE: focus-task-265901:us-central1:andrew-instance
